edit comfiguration code in md file

--- a/docs/谷粒商城—分布式基础.md
+++ b/docs/谷粒商城—分布式基础.md
@@ -136,7 +136,11 @@ Windows IP 配置
    默认网关. . . . . . . . . . . . . :
 ```
 
+For macOS:
 
+```shell
+ipconfig getifaddr en0
+```
 
 
 
@@ -148,6 +152,8 @@ Windows IP 配置
 config.vm.network "private_network", ip: "192.168.56.10"
 ```
 
+
+For macOS, the terminal will prompt to change your IPv4 address to a range. Change accordingly.
 
 
 修改完成后，重启启动vagrant
@@ -239,11 +245,9 @@ sudo docker run -p 3306:3306 --name mysql \
 修改配置
 
 ```properties
-[root@hadoop-104 conf]# pwd
-/mydata/mysql/conf
+[root@hadoop-104 conf]# cd /mydata/mysql/conf
+[root@hadoop-104 conf]# vi /mydata/mysql/conf/my.cnf
 
-
-[root@hadoop-104 conf]# cat my.cnf
 [client]
 default-character-set=utf8
 [mysql]
@@ -255,12 +259,8 @@ character-set-server=utf8
 collation-server=utf8_unicode_ci
 skip-character-set-client-handshake
 skip-name-resolve
-[root@hadoop-104 conf]# 
 
 [root@hadoop-104 conf]# docker restart mysql
-mysql
-[root@hadoop-104 conf]# 
-
 ```
 
 
@@ -293,7 +293,7 @@ root@b3a74e031bd7:/#
 
 设置启动docker时，即运行mysql
 
-```
+```shell
 [root@hadoop-104 ~]# docker update mysql --restart=always
 mysql
 [root@hadoop-104 ~]# 
@@ -358,7 +358,24 @@ redis
 
 ## 4. 创建maven工程
 
+```
+<profiles>
+    <profile>
+      <id>jdk-1.8</id>
 
+      <activation>
+        <activeByDefault>true</activeByDefault> 
+        <jdk>1.8</jdk>
+      </activation>
+
+      <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
+      </properties>
+    </profile>
+</profiles>
+```
 
 ## 5. 执行sql脚本
 
